--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -380,19 +380,19 @@ button[type="action"] {
 
 input.sheet-expand + span::before,
 button.sheet-toggles {
-  opacity: 0;
-  position: absolute;
-  top: -8px;
-  left: -4px;
-  z-index: 3;
-  width: 18px;
-  height: 18px;
+  color      : #A0A0A0;
+  content    : "y";
+  cursor     : pointer;
   font-family: pictos;
-  content: "y";
-	color: #A0A0A0;
-	cursor: pointer;
-	margin-top: 0px;
-  font-size: 16px;
+  font-size  : 1.2em;
+  height     : 1.2em;
+  left       : -0.4em;
+  margin-top : 0px;
+  opacity    : 0;
+  position   : absolute;
+  top        : 0px;
+  width      : 1.2em;
+  z-index    : 3;
 }
 
 .sheet-mount-grid input.sheet-expand + span::before {
@@ -920,6 +920,12 @@ div.sheet-talents-grid span {
 .sheet-talents-box4 {
   grid-row-start: 2;
   grid-column: 1/4;
+}
+
+/* ------------------------------- Mutantions */
+div.sheet-mutantions-grid {
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 
@@ -1997,30 +2003,6 @@ input.sheet-negative:checked + span::before {
   grid-column: 6 / 7;
 }
 
-.sheet-rolltemplate-rolls .sheet-template-artifact-1 {
-  background-image: url("https://s3.amazonaws.com/files.d20.io/images/76934530/UmA1p3wFzVfFRD7A7zo6Tg/max.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.sheet-rolltemplate-rolls .sheet-template-artifact-2 {
-  background-image: url("https://s3.amazonaws.com/files.d20.io/images/76934537/ThGw7C_jknVBMqK9e0g00g/max.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.sheet-rolltemplate-rolls .sheet-template-artifact-3 {
-  background-image: url("https://s3.amazonaws.com/files.d20.io/images/76934549/vSFpnqGHv3kwA6Zhb9BZPw/max.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.sheet-rolltemplate-rolls .sheet-template-artifact-4 {
-  background-image: url("https://s3.amazonaws.com/files.d20.io/images/76934559/7Fy7-GlBQMw0lbXyotUHBg/max.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
 .sheet-rolltemplate-rolls .sheet-template-success {
     max-width: 100%;
     height: auto;
@@ -2147,6 +2129,10 @@ input.sheet-display[value*="settings"] ~ div.sheet-settings {
     -webkit-transition: height 2s; /* Safari */
 }
 
+input.sheet-display[value*="settings"] ~ button.sheet-toggles {
+  opacity: 100;
+}
+
 div.sheet-dots input[type="radio"]:nth-of-type(1n+2) {
     border-radius : 1em;
     cursor        : pointer;
@@ -2185,7 +2171,8 @@ div.sheet-dots input[type="radio"]:checked ~ input[type="radio"] + span {
     word-break  : break-word;
   }
 
-  input.sheet-display[value*="collapse"] ~ div.sheet-talents-grid span.sheet-collapsible {
+  input.sheet-display[value*="collapse"] ~ div.sheet-talents-grid span.sheet-collapsible,
+  input.sheet-display[value*="collapse"] ~ div.sheet-mutantions-grid span.sheet-collapsible {
      height: auto;
      text-align: left;
      visibility  : visible;
@@ -2196,6 +2183,7 @@ div.sheet-dots input[type="radio"]:checked ~ input[type="radio"] + span {
     border     : none;
     font-weight: bold;
     text-align : left;
+    box-shadow : none;
   }
 
   button.sheet-collapse[type="action"]:hover {
