Mythras v2.4 and Odd Soot stub

--- a/Mythras/Mythras.css
+++ b/Mythras/Mythras.css
@@ -499,6 +499,9 @@ input.sheet-luther-arkwright-style-toggle:not(:checked) ~ div .sheet-luther-arkw
 input.sheet-m-space-style-toggle:not(:checked) ~ div .sheet-m-space-style,
 input.sheet-m-space-style-toggle:not(:checked) ~ input[type="radio"].sheet-m-space-style,
 input.sheet-m-space-style-toggle:not(:checked) ~ span.sheet-m-space-style,
+input.sheet-odd-soot-style-toggle:not(:checked) ~ div .sheet-odd-soot-style,
+input.sheet-odd-soot-style-toggle:not(:checked) ~ input[type="radio"].sheet-odd-soot-style,
+input.sheet-odd-soot-style-toggle:not(:checked) ~ span.sheet-odd-soot-style,
 input.sheet-thennla-style-toggle:not(:checked) ~ div .sheet-thennla-style {
     display: none;
 }
@@ -509,6 +512,9 @@ input.sheet-luther-arkwright-style-toggle:checked ~ div .sheet-luther-arkwright-
 input.sheet-m-space-style-toggle:checked ~ div .sheet-m-space-style,
 input.sheet-m-space-style-toggle:checked ~ input[type="radio"].sheet-m-space-style,
 input.sheet-m-space-style-toggle:checked ~ span.sheet-m-space-style,
+input.sheet-odd-soot-style-toggle:checked ~ div .sheet-odd-soot-style,
+input.sheet-odd-soot-style-toggle:checked ~ input[type="radio"].sheet-odd-soot-style,
+input.sheet-odd-soot-style-toggle:checked ~ span.sheet-odd-soot-style,
 input.sheet-thennla-style-toggle:checked ~ div .sheet-thennla-style {
     display: initial;
 }
@@ -602,6 +608,13 @@ input.sheet-dependencies-enabled-toggle:checked ~ div .sheet-dependencies-enable
     display: initial;
 }
 
+input.sheet-peculiarities-enabled-toggle ~ div .sheet-peculiarities-enabled {
+    display: none;
+}
+input.sheet-peculiarities-enabled-toggle:checked ~ div .sheet-peculiarities-enabled {
+    display: initial;
+}
+
 input.sheet-rank-enabled-toggle:not(:checked) ~ div .sheet-rank-enabled {
     display: none;
 }
@@ -653,6 +666,14 @@ input.sheet-status-standard-toggle:checked ~ div .sheet-status-standard {
     display: initial;
 }
 
+input.sheet-strangeness-standard-toggle:not(:checked) ~ div .sheet-strangeness-standard {
+    display: none;
+}
+
+input.sheet-the-soot-standard-toggle:not(:checked) ~ div .sheet-the-soot-standard {
+    display: none;
+}
+
 input.sheet-superstition-standard-toggle ~ div .sheet-superstition-standard {
     display: none;
 }
@@ -661,6 +682,10 @@ input.sheet-superstition-standard-toggle:checked ~ div .sheet-superstition-stand
 }
 
 input.sheet-ms-psionics-enabled-toggle:not(:checked) ~ div .sheet-ms-psionics-enabled {
+    display: none;
+}
+
+input.sheet-os-magic-enabled-toggle:not(:checked) ~ div .sheet-os-magic-enabled {
     display: none;
 }
 
@@ -1585,12 +1610,12 @@ textarea.sheet-known-languages {
 
 div.sheet-dependency-name {
     display: inline-block;
-    width: 36%;
+    width: 35.75%;
 }
 
 div.sheet-passion-name {
     display: inline-block;
-    width: 42%;
+    width: 41.75%;
 }
 
 div.sheet-skill-checkbox {
@@ -1645,6 +1670,10 @@ input[type="checkbox"].sheet-display-mythras-psionics:not(:checked) ~ div.sheet-
 }
 
 input[type="checkbox"].sheet-display-ms-psionics:not(:checked) ~ div.sheet-display-ms-psionics {
+    display: none;
+}
+
+input[type="checkbox"].sheet-display-os-magic:not(:checked) ~ div.sheet-display-os-magic {
     display: none;
 }
 
@@ -1795,6 +1824,12 @@ div.sheet-spell-description {
     display: inline-block;
     text-align: center;
     width: 79%;
+}
+
+div.sheet-odd-soot-spell-description {
+    display: inline-block;
+    text-align: center;
+    width: 52%;
 }
 
 div.sheet-spell-button {
