PF Community v1.736 - added header_image toggle
- set all roll template header images to on/off from the settings|header image section.
- added the option on the game's sheet setting page as well.
- setting the header images will no affect any existing custom URL images all ready set on the sheet by the user.

--- a/Pathfinder Community/pathfinder_community.css
+++ b/Pathfinder Community/pathfinder_community.css
@@ -882,7 +882,9 @@ also need 1 more level in selector or base css will override border */
 .sheet-header-images.sheet-table .sheet-inline-textarea {
 	resize:horizontal;
 }
-
+.sheet-header-images .sheet-table-cell:last-child input[type="radio"] {
+    margin-top: -16px;
+}
 .sheet-label {
     font-weight: bold;
     text-align: center;
