--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1817,3 +1817,24 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
     color: darkred;
     font-weight: bold;
 }
+
+/* -- FOOTER -- */
+.sheet-logo {
+    text-align: center; 
+    margin-top: 10px; 
+    clear: both;
+}
+
+.sheet-logo div.sheet-control {
+    margin-bottom: 10px;
+}
+
+.sheet-logo div.sheet-control button.sheet-no-decoration {
+    border: none;
+    background: none;
+    text-decoration: underline;
+}
+
+.sheet-logo div.sheet-control button[type=roll].sheet-no-decoration::before {
+    content: none;
+}
