--- a/Stories Untold/Stories Untold.css
+++ b/Stories Untold/Stories Untold.css
@@ -71,7 +71,7 @@
     height:819px;
     width:717px;
     min-width: 500px;
-    background: url("https://raw.githubusercontent.com/zschaub/roll20-character-sheets/master/SU-Realms/assets/images/Character%20Tab%20Blank.png");
+    background: url("https://raw.githubusercontent.com/zschaub/roll20-character-sheets/master/Stories%20Untold/assets/images/Character%20Tab%20Blank.png");
     background-repeat:no-repeat;
     background-position:0, 0;
     background-size: cover;
@@ -82,7 +82,7 @@
     height:819px;
     width:717px;
     min-width: 500px;
-    background: url("https://raw.githubusercontent.com/zschaub/roll20-character-sheets/master/SU-Realms/assets/images/Combat%20Tab%20Blank.png");
+    background: url("https://raw.githubusercontent.com/zschaub/roll20-character-sheets/master/Stories%20Untold/assets/images/Combat%20Tab%20Blank.png");
     background-repeat:no-repeat;
     background-position:top left;
     background-size: cover;
@@ -93,7 +93,7 @@
     height:819px;
     width:717px;
     min-width: 500px;
-    background: url("https://raw.githubusercontent.com/zschaub/roll20-character-sheets/master/SU-Realms/assets/images/Notes%20Tab%20Blank.png");
+    background: url("https://raw.githubusercontent.com/zschaub/roll20-character-sheets/master/Stories%20Untold/assets/images/Notes%20Tab%20Blank.png");
     background-repeat:no-repeat;
     background-position:top left;
     background-size: cover;
