--- a/Splittermond/Sheet.css
+++ b/Splittermond/Sheet.css
@@ -156,7 +156,8 @@ input.sheet-tab42:checked ~ span.sheet-tab42 {
 .sheet-rolltemplate-splittermond_generic .sheet-rolltemplate-table-generic,
 .sheet-rolltemplate-splittermond_patzer .sheet-rolltemplate-table-patzer,
 .sheet-rolltemplate-splittermond_initiative .sheet-rolltemplate-table-initiative,
-.sheet-rolltemplate-splittermond_aktiveabwehr .sheet-rolltemplate-table-aktiveabwehr {
+.sheet-rolltemplate-splittermond_aktiveabwehr .sheet-rolltemplate-table-aktiveabwehr,
+.sheet-rolltemplate-splittermond_damage .sheet-rolltemplate-table-damage{
     width:100%;
     background-color: white;
     border:2px solid #000;
@@ -172,7 +173,8 @@ input.sheet-tab42:checked ~ span.sheet-tab42 {
 .sheet-rolltemplate-splittermond_generic .sheet-rolltemplate-table-generic th,
 .sheet-rolltemplate-splittermond_patzer .sheet-rolltemplate-table-patzer th,
 .sheet-rolltemplate-splittermond_initiative .sheet-rolltemplate-table-initiative th,
-.sheet-rolltemplate-splittermond_aktiveabwehr .sheet-rolltemplate-table-aktiveabwehr th {
+.sheet-rolltemplate-splittermond_aktiveabwehr .sheet-rolltemplate-table-aktiveabwehr th,
+.sheet-rolltemplate-splittermond_damage .sheet-rolltemplate-table-damage th{
     width:100%;
     background-color: #0489B1;
     color: white;
