--- a/Mythras/Mythras.css
+++ b/Mythras/Mythras.css
@@ -713,6 +713,10 @@ input.sheet-folk-magic-enabled-toggle:not(:checked) ~ div .sheet-folk-magic-enab
     display: none;
 }
 
+input.sheet-work-songs-enabled-toggle:not(:checked) ~ div .sheet-work-songs-enabled {
+    display: none;
+}
+
 input.sheet-animism-enabled-toggle:not(:checked) ~ div .sheet-animism-enabled {
     display: none;
 }
