--- a/Mythras/templates/main/main.html
+++ b/Mythras/templates/main/main.html
@@ -14,7 +14,7 @@
     <div class="logo float-right">
         <img class="default-style classic-fantasy-style luther-arkwright-style thennla-style" src="http://i.imgur.com/Sm3ilMW.png">
         <img class="m-space-style" src="https://i.imgur.com/5uPy3QU.jpg">
-        <img class="odd-soot-style" src="http://i.imgur.com/Sm3ilMW.png">
+        <img class="odd-soot-style" src="https://i.imgur.com/35dOQix.jpg">
     </div>
     
     <div>
