Removed all use of tables for div/span solutions Fixed a typo in translation

--- a/L5R 5th Edition Unofficial/L5R-5thEdition.css
+++ b/L5R 5th Edition Unofficial/L5R-5thEdition.css
@@ -103,6 +103,10 @@ input.sheet-tab-equipment:checked ~ div.sheet-tab-equipment {
   margin: 0; 
 }
 
+.sheet-display-inline {
+  display: inline-block;
+}
+
 .sheet-wrapper .sheet-hgs-col .sheet-row .sheet-hgs-label input[type=number]
 {
     height: 42px;
@@ -323,16 +327,35 @@ input.sheet-tab-equipment:checked ~ div.sheet-tab-equipment {
   width:100%; 
 }
 
-.sheet-skill-table tr td {  
-  padding: 1px 0 1px 0;
-}
-
-.sheet-skills-row .sheet-skills-col .sheet-skill-row table {
-  margin-bottom:0px;
-}
-
-.sheet-skills-td-header {
+.sheet-skill-div-header {
   font-weight: bold;
+}
+
+.sheet-skill-div-field-name {
+  width: 55%;
+}
+
+.sheet-skill-div-field-input {
+  width: 15%;
+  margin: 0px 1px 1px 1px;
+}
+
+.sheet-skill-div-field-roll {
+  position: relative;
+  width: 10px;
+}
+
+.sheet-skills-div-header-name {
+  width:55%;
+}
+
+.sheet-skills-div-header-rank {
+  width:15%;
+  padding-left: 4px;
+}
+
+.sheet-skills-div-header-bonus {
+  width:15%;
 }
 
 .sheet-skills-row .sheet-skills-col .sheet-skill-row .sheet-skill-table,
@@ -480,21 +503,39 @@ div.sheet-tab-school
     color: black;
 }
 
-.sheet-school-xp-table td {
-  text-align: center;
-  padding: 2px;
-  border: 1px solid #b7b7b7;
+.sheet-school-xp-table {
+  width: 100%;
+  font-size:0px;
 }
 
-.sheet-school-td-header {
-  width: 32%;
+.sheet-simple-gray-border {
+  border: 0.5px solid #b7b7b7;
+}
+
+.sheet-no-right-border {
+  border-right: 0px;
+}
+
+.sheet-no-top-border {
+  border-top: 0px;
+}
+
+.sheet-school-xp-table > div {
+  text-align: center;
+  width:32%;
+  font-size:12px;
+  vertical-align: top;
+}
+.sheet-school-xp-table > div > div {
+  height:20px;
+  line-height: 20px;
+  vertical-align: middle;
+}
+
+.sheet-school-div-header {
   background-color: #b7b7b7;
   font-weight: bold;
   color: black;
-}
-
-.sheet-school-xp-table {
-  width: 90%;
 }
 
 .sheet-wrapper .sheet-row .sheet-school-ranks-col {
@@ -503,128 +544,139 @@ div.sheet-tab-school
 }    
 
 .sheet-wrapper .sheet-row .sheet-school-more-width {
-  width: 47.4%;
+  width: 48%;
 }
 
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table {
-  margin-top: 10px;
-  width: 100%;
-}    
 
 .sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-repeating-table {
   margin-top: 0px;
   width: calc(100% + 1px);
 }
 
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr td {
-  border: 1px solid #b7b7b7;
+
+.sheet-school-rank-table {
+  margin-top: 10px;
+  width: 100%;
+  font-size: 0px;
+}    
+
+.sheet-div-rank-field-name,
+.sheet-div-rank-field-spent {
+  vertical-align: top;
+  height:24.5px;
 }
 
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-school-extra-advances-td-header, 
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-school-rank-td-header {
-  text-align: center;
-  padding-left: 0%;
+.sheet-div-rank-field-name {
+  width:calc(100% - 52px);
+}
+
+.sheet-div-rank-field-spent {
+  width:50px;
+}
+
+.sheet-div-rank-field-spent > input,
+.sheet-div-rank-field-name > input {
+  width:100%;
+  border:none;
+  margin-left:1px;
+  height: 24px;
+  border-radius:0px;
+}
+
+.sheet-div-rank-field-spent > input[type=number],
+.sheet-div-rank-field-name > input[type=number] {
+  width:96%;
+  border:none;
+  margin-left:1px;
+  height: 24px;
+  border-radius:0px;
+  text-align:center;
+}
+
+.sheet-school-rank-div-header {
   font-size: 22px;
   font-weight: bold;
-  border: none;
-  color: black;
-  white-space:nowrap;
-}
-
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-school-extra-advances-td-header {
-  padding-left: 0%;
-}
-
-.sheet-repeating-element-table .sheet-input-rank-field-name,
-.sheet-repeating-element-table-small .sheet-input-rank-field-spent,
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-rank-field-name .sheet-input-rank-field-name,
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-rank-field-spent .sheet-input-rank-field-spent {
-  font-size: 12px;
-  border: none;
-  width: 100%;
-}
-
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-rank-field-spent .sheet-input-rank-field-spent {
   text-align: center;
 }
 
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-rank-field-name {
-  font-size: 12px;
-  width: 80%;
-}    
-
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-rank-field-spent {
-  font-size: 12px;
-  width: 20%;
-}    
-
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-school-gray {
-  background-color: #b7b7b7;
-  font-size: 10px;
-  padding-left: 5px;
-  color: black;
-}    
-
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-sub-header,
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-sub-header-small {
-  background-color: #b7b7b7;
+.sheet-div-sub-header-small,
+.sheet-div-sub-header {
   color: black;
   font-size: 18px;
-  padding: 5px 0 0 5px;
-  width: 80%;
-}    
+  height: 25px;
+  line-height: 25px;
+  padding-top: 5px;
+}
 
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-sub-header-small {
+.sheet-div-school-gray {
+  background-color: #b7b7b7;
+}
+
+.sheet-div-school-exp-text > span,
+.sheet-div-sub-header > span {
+  padding-left: 5px;
+  white-space: nowrap;
+}
+
+.sheet-div-sub-header-small {
   font-size: 10px;
-  width: 20%;
-  padding: 0px;
+  width: 50px;
   text-align: center;
-} 
-
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-ea {
-  width:70%;
-} 
-
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-ea-small {
-  width:15%;
 }
 
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-mastery-ability {
+.sheet-div-school-exp-text {
+  height: 24.5px;
+  font-size: 10px;
+  line-height: 25px;
+  text-align: left;
+}
+
+.sheet-div-mastery-ability {
   width: 100%;
 }
 
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-mastery-ability-box .sheet-mastery-ability-box {
+.sheet-div-mastery-ability-box .sheet-mastery-ability-box {
   resize: none;
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 2px);
+  height: 99%;
   padding: 0px;
   margin-bottom: 0px;
   border: none;
   text-indent: 4px;
+  margin-left: 1px;
 }
 
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-mastery-ability-box {
-  padding-top: 2px;
-  height: 267px;
+.sheet-div-mastery-ability-box {
+  height: 250px;
 }
 
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-title-mastery-ability {
+.sheet-div-ea {
+  width:calc(70% - 3px);
+} 
+
+.sheet-div-ea-small {
+  width:15%;
+}
+
+.sheet-div-title-mastery-ability {
   width: 100%;
 }
 
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-title-mastery-ability-box .sheet-title-mastery-ability-box {
-  width: 99%;
+
+.sheet-div-title-mastery-ability-box .sheet-title-mastery-ability-box {
+  width: calc(100% - 2px);
   height: 120px;
   padding: 0px;
   margin-left: 1px;
-  margin-bottom: 0px;
+  margin-bottom: 1px;
   border: none;
   resize: vertical;
   text-indent: 4px;
 }
 
-.sheet-wrapper .sheet-row .sheet-school-ranks-col .sheet-school-rank-table tr .sheet-td-title-mastery-ability-box {
-  padding-top: 2px;
+.sheet-div-title-mastery-ability-box {
+  padding-top: 1px;
+  width:calc(100% - 2px);
 }
 
 /* End School */
@@ -674,6 +726,10 @@ div.sheet-tab-school
 
 /* Start Equipment */
 
+.sheet-div-equipment-gray {
+  background-color: #b7b7b7;
+}
+
 .sheet-weapon-armor-equipment-header {
   font-size: 22px;
   font-weight: bold;
@@ -697,15 +753,12 @@ div.sheet-tab-school
   color:black;
 }   
 
-.sheet-equipment-table tr td {
-  border: 1px solid black;
-}
-
-.sheet-equipment-table tr .sheet-td-equipment-field  {
+.sheet-div-equipment-field  {
   font-size: 10px;
   border: none;
   width: 100%;
-  height:15px;
+  height: 100%;
+  line-height:25px;
   color: black;
   background-color: #b7b7b7;
 }
