Updated sheet with roll macro for Techniques for easier print between players and DMs.

--- a/L5R 5th Edition Unofficial/L5R-5thEdition.css
+++ b/L5R 5th Edition Unofficial/L5R-5thEdition.css
@@ -438,6 +438,10 @@ input.sheet-tab-equipment:checked ~ div.sheet-tab-equipment {
   background-image: url(http://suanho.com/sheet-assets/d6-4.png);
 }
 
+.sheet-extra-skill-button:hover,
+.sheet-extra-ring-button:hover {
+  background-color:#f1eded;
+}
 
 /* four image containers */
 .sheet-col-symbol {
@@ -721,6 +725,24 @@ div.sheet-tab-school
   margin-top: 5px;
 }
 
+.sheet-technique-roll {
+
+}
+
+.sheet-technique-roll-button {
+  width: calc(100% - 16px);
+  height: 20px;
+}
+
+.sheet-technique-roll-button::before {
+  font-size: 0px;
+}
+
+.sheet-print-technique {
+  font-size: 12px;
+  line-height: 20px;
+}
+
 /* End Techniques */
 
 
@@ -857,6 +879,7 @@ div.sheet-tab-input
 
 /* Stat Roll Template */
 
+.sheet-rolltemplate-l5r5th h3.sheet-sub-title,
 .sheet-rolltemplate-l5r5th h2.sheet-caption {
   color: black;
   text-align: center;
@@ -871,6 +894,14 @@ div.sheet-tab-input
   margin-top: 0px;
   padding-top: 5px;
 }
+
+.sheet-rolltemplate-l5r5th h3.sheet-sub-title {
+    font-size: 0.8em;
+    font-weight: normal;
+    margin-top: -10px;
+    line-height: 25px;
+}
+
 .sheet-rolltemplate-l5r5th .sheet-top-roll-bar {
   width:calc(100% - 8px); 
   margin: 0 4px 0 4px;
@@ -943,4 +974,22 @@ div.sheet-tab-input
   border: 0px;
   border-bottom: 1px solid black;
   font-size: 16px;
+}
+
+.sheet-rolltemplate-l5r5th .sheet-template-check,
+.sheet-rolltemplate-l5r5th .sheet-template-effects,
+.sheet-rolltemplate-l5r5th .sheet-template-opportunities {
+  text-align: left;
+}
+
+.sheet-rolltemplate-l5r5th .sheet-template-check {
+
+}
+
+.sheet-rolltemplate-l5r5th .sheet-template-effects {
+
+}
+
+.sheet-rolltemplate-l5r5th .sheet-template-opportunities {
+
 }
