--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -938,6 +938,14 @@ div.sheet-mutantions-grid {
   padding: 1px 0 1px 0;
 }
 
+div.sheet-repeating-skill-grid {
+  display: grid;
+  grid-template-columns: 3fr 2fr 1fr 0.5fr 1fr;
+  grid-row-gap: 2px;
+  grid-column-gap: 2px;
+  padding: 1px 0 1px 0;
+}
+
 .sheet-skills-grid > span > div {
   display: flex;
   justify-content: space-around;
@@ -1776,8 +1784,8 @@ div.sheet-experience-box div.sheet-dots {
 div.sheet-weapons-grid button[type="action"]:hover,
 div.sheet-weapons-grid button[type="action"]:hover > span,
 button[type="roll"]:hover {
-  background: #810000;
   color: #fff;
+  background-color: #8c4110;
 }
 
 button[type="action"] > span {
@@ -2133,12 +2141,16 @@ input.sheet-display[value*="settings"] ~ button.sheet-toggles {
   opacity: 100;
 }
 
-div.sheet-dots input[type="radio"]:nth-of-type(1n+2) {
+div.sheet-dots {
+  margin-top: 2%;
+}
+
+div.sheet-dots input[type="radio"] {
     border-radius : 1em;
     cursor        : pointer;
     height        : 1.23em;
-    left          : 1.3em;
-    margin-left   : -1em;
+    left          : 1.5em;
+    margin-left   : -1.4em;
     opacity       : 0;
     position      : relative;
     vertical-align: middle;
@@ -2148,19 +2160,42 @@ div.sheet-dots input[type="radio"]:nth-of-type(1n+2) {
 
 div.sheet-dots input[type="radio"] + span {
   background-color: #c77624;
-  border          : 2px solid #000;
-  border-radius   : 1em;
+  border          : 0.15em solid #000;
+  border-radius   : 1.5em;
+  color           : #fff;
   display         : inline-block;
-  height          : 1em;
+  font-weight     : bold;
+  height          : 1.5em;
+  text-align      : center;
   vertical-align  : middle;
-  width           : 1em;
+  width           : 1.5em;
 }
 
 div.sheet-dots input[type="radio"]:checked ~ input[type="radio"] + span {    
    background-color: transparent;
 }
 
+div.sheet-rot-grid input[type="number"].sheet-input-number {
+  width: 4em;
+}
+
+div.sheet-rot-grid div.sheet-dots {
+  margin-bottom: 2%;
+}
+
+div.sheet-rot-grid label[title="permaneant rot"] {
+
+}
+
+div.sheet-rot-grid label[title="permaneant rot"] > span {
+  text-transform: capitalize;
+}
+
   /***** COLLAPSABLE DIVS *****/
+  button.sheet-dicefontd6 {
+    font-family: "dicefontd6";
+  }
+
   span.sheet-collapsible {
     grid-column : 1 / 4;
     height      : 0em;
