Small update to NPC-sheet to only show demeanor-adjustment-boxes when choosing "Custom demeanor" in the "Choose demeanor field"

--- a/L5R 5th Edition Unofficial/L5R-5thEdition.css
+++ b/L5R 5th Edition Unofficial/L5R-5thEdition.css
@@ -1406,12 +1406,12 @@ input.sheet-are-you-sure-trigger {
   font-size: 16px;
 }
 
-.sheet-npc .sheet-wrapper .sheet-row .sheet-col .sheet-row .sheet-select-demeanor[value="2"] ~ .sheet-npc .sheet-wrapper .sheet-row .sheet-col .sheet-row .sheet-npc-bonus-ring-field div label .input[type=number] {
-  display:none;
-} 
+.sheet-select-demeanor:invalid + .sheet-demeanor-boxes { 
+  display: block; 
+}
 
-.sheet-select-demeanor[value="2"] ~ .sheet-npc-bonus-ring-field div label {
-  display:none;
+.sheet-select-demeanor:valid + .sheet-demeanor-boxes { 
+  display: none; 
 }
 
 .sheet-npc-desc-dice-demea {
