Added artifice and alchemy

--- a/Mythras/Mythras.css
+++ b/Mythras/Mythras.css
@@ -717,7 +717,15 @@ input.sheet-work-songs-enabled-toggle:not(:checked) ~ div .sheet-work-songs-enab
     display: none;
 }
 
+input.sheet-alchemy-enabled-toggle:not(:checked) ~ div .sheet-alchemy-enabled {
+    display: none;
+}
+
 input.sheet-animism-enabled-toggle:not(:checked) ~ div .sheet-animism-enabled {
+    display: none;
+}
+
+input.sheet-artifice-enabled-toggle:not(:checked) ~ div .sheet-artifice-enabled {
     display: none;
 }
 
@@ -1681,7 +1689,15 @@ input[type="checkbox"].sheet-display-os-magic:not(:checked) ~ div.sheet-display-
     display: none;
 }
 
+input[type="checkbox"].sheet-display-alchemy:not(:checked) ~ div.sheet-display-alchemy {
+    display: none;
+}
+
 input[type="checkbox"].sheet-display-animism:not(:checked) ~ div.sheet-display-animism {
+    display: none;
+}
+
+input[type="checkbox"].sheet-display-artifice:not(:checked) ~ div.sheet-display-artifice {
     display: none;
 }
 
@@ -1913,6 +1929,25 @@ div.sheet-fetish-powers-column {
     display: inline-block;
     width: 66%;
 }
+
+div.sheet-artifice-number {
+    display: inline-block;
+    text-align: center;
+    width: 24.5%;
+}
+
+div.sheet-alchemy-techniques {
+    display: inline-block;
+    text-align: center;
+    width: 52%;
+}
+
+div.sheet-alchemical-tradition-number {
+    display: inline-block;
+    text-align: center;
+    width: 25.75%;
+}
+
 div.sheet-mediation-number {
     display: inline-block;
     text-align: center;
@@ -1932,6 +1967,16 @@ div.sheet-talent-description {
     display: inline-block;
     text-align: center;
     width: 60.5%;
+}
+div.sheet-formula-type {
+    display: inline-block;
+    text-align: center;
+    width: 12%;
+}
+div.sheet-formula-description {
+    display: inline-block;
+    text-align: center;
+    width: 66.5%;
 }
 div.sheet-la-discipline-number {
     display: inline-block;
