uc-535:dnd5e fixed hit die button for spanish sheet version

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -3585,6 +3585,7 @@ span.sheet-spellconcentration
 .lang-es .sheet-hdice-dsaves-container button {
     position: absolute;
     bottom: 0;
+    left: 0;
 }
 
 .lang-es .sheet-hp .sheet-top input[name="attr_hp_max"] {
