--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1592,16 +1592,40 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
     width: calc(100% - 0.4em); 
 }
 
-.sheet-spells .sheet-col0 { width: calc(100% - 432px); }
-
 .sheet-spells .sheet-header {
     height: 30px;
     padding: 5px;
 }
 
+/* -- highlight row -- */
+.sheet-spells .repcontainer.ui-sortable.editmode .sheet-toggle-highlight {
+    opacity: 0;
+    z-index: -1;
+}
+
+.sheet-spells input.sheet-toggle-highlight[type="checkbox"] {
+    width: 16px;
+    height: 22px;
+    opacity: 1;
+    position: absolute;
+    margin-left: 5px;
+}
+
+.sheet-spells .sheet-toggle-notes {
+    position: absolute;
+    left: 22px;
+}
+
+.sheet-spells input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-stats,
+.sheet-spells input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-details {
+    background: #B7FFAA;    
+}
+
+.sheet-spells .sheet-col0 { width: calc(100% - 475px); }
+
 .sheet-spells .sheet-col0 input { text-align:left; }
 
-.sheet-spells .sheet-col1 { width: 22px; }
+.sheet-spells .sheet-col1 { width: 25px; }
 
 .sheet-spells .sheet-col1 input { text-align:left; }
 
@@ -1625,7 +1649,7 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
     margin-right: 15px;
 }
 
-.sheet-spells .sheet-row-stats .sheet-col0 { margin-left: 20px; width: calc(100% - 452px); }
+.sheet-spells .sheet-row-stats .sheet-col0 { margin-left: 44px; width: calc(100% - 523px); }
 
 /* -- if edit mode, hide toggle notes -- */
 .sheet-spells .repcontainer.ui-sortable.editmode .sheet-checkbox,
