--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1770,6 +1770,10 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
     /*border-bottom: 1px solid black;*/
 }
 
+.sheet-rolltemplate-skillRoll .sheet-container table.sheet-result td span.sheet-ref-label {
+    float: right;
+}
+
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result span.sheet-damageType {
     font-weight: bold;
     color: darkred;
