fixed skills, wip gear

--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -201,48 +201,7 @@ input[type="checkbox"].sheet-xbox:not(:checked) + span::before {
   content: "";
 }
 
-/* Fake Action Button */
-button.sheet-roll-button {
-  text-align: center;
-  display: inline-block;
-  vertical-align: middle;
-  font-weight: normal;
-  line-height: 18px;
-  font-family: "dicefontd20";
-  content: "t";
-  padding: 2px 3px;
-  font-size: 1.3em;
-  margin: 2px 3px 2px 3px;
-  align-items: flex-start;
-  color: buttontext;
-  background-color: buttonface;
-  background-image: -webkit-linear-gradient(top, #fff, #e6e6e6);
-  box-sizing: border-box;
-  border-radius: 4px;
-  border-width: 2px;
-  border-style: outset;
-  border-color: buttonface;
-  border: 1px solid #ccc;
-  border-bottom-color: #bbb;
-  border-image: initial;
-  cursor: pointer;
-}
 
-input[type="checkbox"].sheet-hidden {
-  display: none;
-}
-
-input.sheet-hidden.sheet-api-toggle-show:checked ~ .sheet-template-roll {
-  display: none;
-}
-
-div.sheet-grid-item.sheet-api-roll {
-  display: none;
-}
-
-input.sheet-hidden.sheet-api-toggle-show:checked ~ div.sheet-grid-item.sheet-api-roll {
-display: block;
-}
 
 /* repcontrol */
 
@@ -271,9 +230,9 @@ display: block;
 /* Sheet Tabs */
 
 div.sheet-tab-content {
-   display: none;
    border-top: 1px solid #ffffff;
-   margin-top: -30px;
+   display   : none;
+   margin-top: -8%;
 }
 
 input.sheet-tab[value="character"] ~ div.sheet-character,
@@ -300,17 +259,20 @@ button:hover {
 
 /* Remove the Die Icon */
 button::before {
-  display: none;}
-.sheet-wrapper {
-  width: 100%;
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-  overflow: hidden;
-  padding-top: 70px;
+  display: none;
+}
+
+div.sheet-wrapper {
+  font-family   : "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  overflow      : hidden;
   padding-bottom: 40px;
+  padding-top   : 70px;
+  width         : 66em;
  }
 
 div.sheet-logo {
   text-align: center;
+  margin-top: -5%;
 }
 
 div.sheet-logo img {
@@ -377,8 +339,6 @@ button[type="action"] {
   height: 18px;
 	z-index: 6;
 }
-
-input.sheet-expand + span::before,
 button.sheet-toggles {
   color      : #A0A0A0;
   content    : "y";
@@ -395,7 +355,7 @@ button.sheet-toggles {
   z-index    : 3;
 }
 
-.sheet-mount-grid input.sheet-expand + span::before {
+.sheet-vehicle-grid input.sheet-expand + span::before {
   margin-top: 2.75em;
 }
 
@@ -403,26 +363,12 @@ button.sheet-toggles {
 .repitem .sheet-talents-grid input.sheet-expand:checked + span::before,
 .repitem .sheet-gear-grid:hover input.sheet-expand + span::before,
 .repitem .sheet-gear-grid input.sheet-expand:checked + span::before,
-.sheet-mount-grid:hover input.sheet-expand + span::before,
-.sheet-mount-grid input.sheet-expand:checked + span::before,
-.repitem .sheet-mount_gear-grid:hover input.sheet-expand + span::before,
-.repitem .sheet-mount_gear-grid input.sheet-expand:checked + span::before,
+.sheet-vehicle-grid:hover input.sheet-expand + span::before,
+.sheet-vehicle-grid input.sheet-expand:checked + span::before,
+.repitem .sheet-vehicle_gear-grid:hover input.sheet-expand + span::before,
+.repitem .sheet-vehicle_gear-grid input.sheet-expand:checked + span::before,
 button.sheet-toggles:hover {
   opacity: 100;
-}
-
-input.sheet-expand ~ .sheet-input-textarea {
-  display: none;
-}
-
-input.sheet-expand:checked ~ .sheet-input-textarea {
-  display: block;
-  line-height: 1.2em;
-  height: 4.5em;
-  min-height: 2em;
-  border: 2px dotted #C3996B;
-  overflow: hidden;
-  box-sizing: border-box;
 }
 
 /* character grid layout */
@@ -517,12 +463,12 @@ div.sheet-experience-dots {
   grid-row-end: span 2;
 }
 
-.sheet-character-mount {
+.sheet-character-vehicle {
   grid-row-start: 11;
   grid-column-start: 3;
 }
 
-.sheet-character-mount_gear {
+.sheet-character-vehicle_gear {
   grid-row-start: 14;
   grid-column-start: 3;
   grid-row-end: span 4;
@@ -803,7 +749,7 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
 
 .sheet-weapons-grid {
   display: grid;
-  grid-template-columns: 2.5em auto 4em 6em 4em 4em 4em 6em auto;
+  grid-template-columns: 1fr 6fr 2fr 2fr 2fr 2fr 2fr 10fr;
   grid-row-gap: 2px;
   grid-column-gap: 2px;
   padding: 0 0 2px 0;
@@ -931,19 +877,40 @@ div.sheet-mutantions-grid {
 
 /* ---------------------------------- Skills */
 .sheet-skills-grid > span {
-  display: grid;
-  grid-template-columns: 5fr 2fr 1fr 0.5fr 1fr;
-  grid-row-gap: 2px;
-  grid-column-gap: 2px;
-  padding: 1px 0 1px 0;
+  display              : grid;
+  grid-column-gap      : 2px;
+  grid-row-gap         : 2px;
+  grid-template-columns: 5fr 1.5fr 2fr 0.5fr 1fr;
+  padding              : 1px 0 1px 0;
 }
 
 div.sheet-repeating-skill-grid {
-  display: grid;
-  grid-template-columns: 3fr 2fr 1fr 0.5fr 1fr;
-  grid-row-gap: 2px;
-  grid-column-gap: 2px;
-  padding: 1px 0 1px 0;
+  display              : grid;
+  grid-column-gap      : 2px;
+  grid-row-gap         : 2px;
+  grid-template-columns: 5fr 1.5fr 2fr 0.5fr 1fr;
+  padding              : 1px 0 1px 0;
+}
+
+div.sheet-repeating-skill-grid button[type="action"] {
+  grid-column: 1;
+  grid-row: 1;
+  position: relative;
+}
+
+div.sheet-repeating-skill-grid input[name="attr_name"] {
+  grid-column: 1 / 6;
+  grid-row   : 1;
+  text-align : left;
+  width      : 100%;
+}
+
+div.sheet-repeating-skill-grid select {
+  width: 100%;
+}
+
+div.sheet-repeating-skill-grid span {
+  text-align: center;
 }
 
 .sheet-skills-grid > span > div {
@@ -1216,9 +1183,9 @@ div.sheet-repeating-skill-grid {
   grid-column-start: 4;
 }
 
-/* ---------------------------------- Mount */
+/* ---------------------------------- vehicle */
 
-.sheet-mount-grid {
+.sheet-vehicle-grid {
   display: grid;
   grid-template-columns: auto repeat(4, 2.5em);
   grid-template-rows: auto;
@@ -1226,120 +1193,120 @@ div.sheet-repeating-skill-grid {
   position: relative;
 }
 
-.sheet-mount-grid > div {
+.sheet-vehicle-grid > div {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-.sheet-mount-box1 {
+.sheet-vehicle-box1 {
   grid-row-start: 1;
   grid-column: 1/6;
 }
 
-.sheet-mount-box2 {
+.sheet-vehicle-box2 {
   grid-row-start: 2;
   grid-column-start: 1;
 }
 
-.sheet-mount-box3 {
+.sheet-vehicle-box3 {
   grid-row-start: 2;
   grid-column-start: 2;
 }
 
-.sheet-mount-box4 {
+.sheet-vehicle-box4 {
   grid-row-start: 2;
   grid-column-start: 3;
 }
 
-.sheet-mount-box5 {
+.sheet-vehicle-box5 {
   grid-row-start: 2;
   grid-column-start: 4;
 }
 
-.sheet-mount-box6 {
+.sheet-vehicle-box6 {
   grid-row-start: 2;
   grid-column-start: 5;
 }
 
-.sheet-mount-box7 {
+.sheet-vehicle-box7 {
   grid-row-start: 3;
   grid-column: 1/6;
 }
 
-/* ---------------------------------- Mount_gear */
+/* ---------------------------------- vehicle_gear */
 
-.sheet-mount_gear-grid {
+.sheet-vehicle_gear-grid {
   display: grid;
   grid-template-columns: auto 3em 2em 3em;
   grid-template-rows: auto;
   grid-row-gap: 2px;
 }
 
-.sheet-mount_gear-subgrid {
+.sheet-vehicle_gear-subgrid {
   display: grid;
   grid-template-columns: 4em 3em 9em 3em;
   grid-row-gap: 2px;
   grid-column-gap: 2px;
 }
 
-.sheet-mount_gear-subgrid > div {
+.sheet-vehicle_gear-subgrid > div {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-.sheet-mount_gear-box1 {
+.sheet-vehicle_gear-box1 {
   grid-row-start: 1;
   grid-column: 1/5;
 }
 
-.sheet-mount_gear-box2 {
+.sheet-vehicle_gear-box2 {
   grid-row-start: 1;
   grid-column-start: 2;
 }
 
-.sheet-mount_gear-box3 {
+.sheet-vehicle_gear-box3 {
   grid-row-start: 1;
   grid-column-start: 3;
 }
 
-.sheet-mount_gear-box4 {
+.sheet-vehicle_gear-box4 {
   grid-row-start: 1;
   grid-column-start: 4;
 }
 
-.sheet-mount_gear-box5 {
+.sheet-vehicle_gear-box5 {
   grid-row-start: 2;
   grid-column: 1/5;
 }
 
-.sheet-mount_gear-coin {
+.sheet-vehicle_gear-coin {
   grid-row-start: 3;
   grid-column: 1/5;
 }
 
-.sheet-mount_gear-box6 {
+.sheet-vehicle_gear-box6 {
   grid-row-start: 4;
   grid-column: 1/5;
 }
 
-.sheet-mount_gear-box7 {
+.sheet-vehicle_gear-box7 {
   grid-row-start: 1;
   grid-column: 1/2;
 }
 
-.sheet-mount_gear-box8 {
+.sheet-vehicle_gear-box8 {
   grid-row-start: 1;
   grid-column-start: 2;
 }
 
-.sheet-mount_gear-box9 {
+.sheet-vehicle_gear-box9 {
   grid-row-start: 1;
   grid-column-start: 3;
 }
 
-.sheet-mount_gear-box10 {
+.sheet-vehicle_gear-box10 {
   grid-row-start: 1;
   grid-column-start: 4;
 }
@@ -1920,13 +1887,13 @@ input.sheet-negative:checked + span::before {
 }
 
 .sheet-rolltemplate-rolls div.sheet-free-text {
-  font-size: 1em;
-  display: flex;
-  align-items: center;
+  font-size      : 1em;
+  display        : flex;
+  align-items    : center;
   justify-content: left;
-  line-height: 1em;
-  padding: 2px;
-  margin: -2px -5px 2px -5px;
+  line-height    : 1em;
+  padding        : 2px;
+  margin         : -2px -5px 2px -5px;
 }
 
 .sheet-rolltemplate-rolls .sheet-template-grid {
@@ -2039,33 +2006,28 @@ input.sheet-negative:checked + span::before {
     font-size: 0.75em;
 }
 
+.sheet-rolltemplate-rolls .sheet-template-base-dice,
+.sheet-rolltemplate-rolls .sheet-template-skill-dice,
+.sheet-rolltemplate-rolls .sheet-template-black-dice {
+    border       : 1px solid #000;
+    border-radius: 5px;
+    color        : #fff;
+    line-height  : 0;
+    padding      : 3px;
+    text-align   : center;
+}
+
 .sheet-rolltemplate-rolls .sheet-template-base-dice {
   background-color: yellow;
-  border: 1px solid #000;
-  border-radius: 5px;
-  padding: 3px;
-  text-align: center;
-  line-height: 0;
+  color           : #000;
 }
 
 .sheet-rolltemplate-rolls .sheet-template-skill-dice {
-    background-color: #235402;
-    color: #fff;
-    border: 1px solid #000;
-    border-radius: 5px;
-    padding: 3px;
-    text-align: center;
-    line-height: 0;
+  background-color: #235402;
 }
 
 .sheet-rolltemplate-rolls .sheet-template-black-dice {
   background-color: #000;
-  color: #fff;
-  border: 1px solid #000;
-  border-radius: 5px;
-  padding: 3px;
-  text-align: center;
-  line-height: 0;
 }
 
 .sheet-rolltemplate-rolls .sheet-template-skill-dice img,
@@ -2085,19 +2047,11 @@ input.sheet-negative:checked + span::before {
   margin: 50% 0 50% 0;
   line-height: 0;
 }
-.sheet-rolltemplate-rolls .inlinerollresult.fullcrit {
+.sheet-rolltemplate-rolls .inlinerollresult.fullcrit,
+.sheet-rolltemplate-rolls .inlinerollresult.importantroll,
+.sheet-rolltemplate-rolls .inlinerollresult.fullfail  {
     color: inherit;
     border: none;
-}
-
-.sheet-rolltemplate-rolls .inlinerollresult.fullfail {
-  color: inherit;
-  border: none;
-}
-
-.sheet-rolltemplate-rolls .inlinerollresult.importantroll {
-  color: inherit;
-  border: none;
 }
 
 /* Mutant Year Zero */
@@ -2135,6 +2089,10 @@ input.sheet-display[value*="settings"] ~ div.sheet-settings {
     height    : 12em;
     transition: height 2s;
     -webkit-transition: height 2s; /* Safari */
+}
+
+input.sheet-display[value*="settings"] ~ div.sheet-repeating-skill-grid.sheet-settings {
+    height: 2.5em;
 }
 
 input.sheet-display[value*="settings"] ~ button.sheet-toggles {
@@ -2184,7 +2142,8 @@ div.sheet-rot-grid div.sheet-dots {
 }
 
 div.sheet-rot-grid label[title="permaneant rot"] {
-
+  display: inline-block;
+  width: 80%;
 }
 
 div.sheet-rot-grid label[title="permaneant rot"] > span {
@@ -2208,9 +2167,9 @@ div.sheet-rot-grid label[title="permaneant rot"] > span {
 
   input.sheet-display[value*="collapse"] ~ div.sheet-talents-grid span.sheet-collapsible,
   input.sheet-display[value*="collapse"] ~ div.sheet-mutantions-grid span.sheet-collapsible {
-     height: auto;
+     height    : auto;
      text-align: left;
-     visibility  : visible;
+     visibility: visible;
   }
 
   button.sheet-collapse[type="action"] {
@@ -2289,12 +2248,14 @@ div.sheet-armor-box {
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header12.jpg");
 }
 
-div.sheet-character-experience  {
+div.sheet-character-experience,
+div.sheet-vehicle_gear-box6.sheet-header  {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header6.jpg");
 }
 
-div.sheet-notes-box1 {
+div.sheet-notes-box1,
+div.sheet-vehicle_gear-box1 {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header18.jpg");
 }
