--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -339,20 +339,28 @@ button[type="action"] {
   height: 18px;
 	z-index: 6;
 }
+
 button.sheet-toggles {
-  color      : #A0A0A0;
-  content    : "y";
-  cursor     : pointer;
-  font-family: pictos;
-  font-size  : 1.2em;
-  height     : 1.2em;
-  left       : -0.4em;
-  margin-top : 0px;
-  opacity    : 0;
-  position   : absolute;
-  top        : 0px;
-  width      : 1.2em;
-  z-index    : 3;
+    background    : none;
+    border        : none;
+    color         : #A0A0A0;
+    content       : "y";
+    cursor        : pointer;
+    font-family   : pictos;
+    font-size     : 1.2em;
+    font-weight   : normal;
+    height        : 1.2em;
+    opacity       : 0;
+    padding       : 0px;
+    text-transform: lowercase;
+    width         : 1.2em;
+    z-index       : 3;
+}
+
+button.sheet-toggles-repeating {
+  left      : -0.4em;
+  margin-top: 0px;
+  position  : absolute;
 }
 
 .sheet-vehicle-grid input.sheet-expand + span::before {
@@ -469,7 +477,7 @@ div.sheet-experience-dots {
 }
 
 .sheet-character-vehicle_gear {
-  grid-row-start: 14;
+  grid-row-start: 12;
   grid-column-start: 3;
   grid-row-end: span 4;
 }
@@ -554,15 +562,14 @@ div.sheet-experience-dots {
 /* ---------------------------------- Appearance */
 
 .sheet-appearance-grid {
-  display: grid;
-  grid-template-columns: 7em 3em auto auto;
-  grid-column-gap: 2px;
-  grid-row-gap: 10px;
+  display              : grid;
+  grid-column-gap      : 0.1em;
+  grid-row-gap         : 0.2em;
+  grid-template-columns: 1fr 4fr;
 }
 
 .sheet-appearance-grid > div {
   display: flex;
-  justify-content: space-around;
   align-items: center;
 }
 
@@ -579,6 +586,7 @@ div.sheet-experience-dots {
 .sheet-appearance-box3 {
   grid-row-start: 2;
   grid-column: 2/5;
+  margin: 2%;
 }
 
 .sheet-appearance-box4 {
@@ -589,6 +597,7 @@ div.sheet-experience-dots {
 .sheet-appearance-box5 {
   grid-row-start: 3;
   grid-column: 2/5;
+  margin: 2%;
 }
 
 .sheet-appearance-box6 {
@@ -599,6 +608,7 @@ div.sheet-experience-dots {
 .sheet-appearance-box7 {
   grid-row-start: 4;
   grid-column: 2/5;
+  margin: 2%;
 }
 
 /* ---------------------------------- Conditions */
@@ -997,6 +1007,7 @@ div.sheet-repeating-skill-grid span {
 .sheet-armor-box4 {
   grid-row-start: 1;
   grid-column-start: 4;
+  color: #fff;
 }
 
 .sheet-armor-box5 {
@@ -1110,10 +1121,21 @@ div.sheet-repeating-skill-grid span {
 /* ---------------------------------- Gear */
 
 .sheet-gear-grid {
-  display: grid;
+  display              : grid;
+  grid-column-gap      : 1%;
+  grid-row-gap         : 0.1em;
   grid-template-columns: auto 3em 2em 3em;
-  grid-template-rows: auto;
-  grid-row-gap: 2px;
+  grid-template-rows   : auto;
+}
+
+div.sheet-gear-grid span,
+div.sheet-vehicle_gear-grid {
+  text-align: center;
+}
+
+div.sheet-vehicle_gear-grid input[name="attr_gear_name"],
+div.sheet-vehicle_gear-grid input[name="attr_vehicle_gear_name"] {
+  grid-column: 1 / 2;
 }
 
 .sheet-gear-subgrid {
@@ -2055,20 +2077,9 @@ input.sheet-negative:checked + span::before {
 }
 
 /* Mutant Year Zero */
-button.sheet-toggles {
-  background    : none;
-  border        : none;
-  font-weight   : normal;
-  padding       : 0px;
-  text-transform: lowercase;
-}
 
 div.sheet-settings {
   overflow  : hidden;
-}
-
-div.sheet-settings input {
-  text-align: center;
 }
 
 div.sheet-settings textarea {
@@ -2079,25 +2090,44 @@ div.sheet-settings textarea {
 }
 
 input.sheet-display[value*="display"] ~ div.sheet-settings {
-    height    : 0px;
-    transition: height 2s;
-    -webkit-transition: height 2s; /* Safari */
+  height    : 0px;
+  transition: height 2s;
+  -webkit-transition: height 2s; /* Safari */
 }
 
 input.sheet-display[value*="settings"] ~ div.sheet-settings {
-    border-top: 1px dotted orange;
-    height    : 12em;
-    transition: height 2s;
-    -webkit-transition: height 2s; /* Safari */
+  border-top: 1px dotted orange;
+  height    : 12em;
+  transition: height 2s;
+  -webkit-transition: height 2s; /* Safari */
 }
 
 input.sheet-display[value*="settings"] ~ div.sheet-repeating-skill-grid.sheet-settings {
-    height: 2.5em;
+  height: 2.5em;
 }
 
-input.sheet-display[value*="settings"] ~ button.sheet-toggles {
+input.sheet-display[value*="settings"] ~ button.sheet-toggles,
+input.sheet-display[value*="face"] ~ div.sheet-appearance-box2 button.sheet-toggles,
+input.sheet-display[value*="body"] ~ div.sheet-appearance-box4 button.sheet-toggles,
+input.sheet-display[value*="clothing"] ~ div.sheet-appearance-box6 button.sheet-toggles {
   opacity: 100;
 }
+
+input.sheet-display[value*="face"] ~ div.sheet-appearance-box3 textarea,
+input.sheet-display[value*="body"] ~ div.sheet-appearance-box5 textarea,
+input.sheet-display[value*="clothing"] ~ div.sheet-appearance-box7 textarea {
+  display: inline-block;
+}
+
+div.sheet-appearance-box3 textarea,
+div.sheet-appearance-box5 textarea,
+div.sheet-appearance-box7 textarea,
+input.sheet-display[value*="face"] ~ div.sheet-appearance-box3 span,
+input.sheet-display[value*="body"] ~ div.sheet-appearance-box5 span,
+input.sheet-display[value*="clothing"] ~ div.sheet-appearance-box7 span {
+  display: none;
+}
+
 
 div.sheet-dots {
   margin-top: 2%;
@@ -2155,6 +2185,10 @@ div.sheet-rot-grid label[title="permaneant rot"] > span {
     font-family: "dicefontd6";
   }
 
+  button.sheet-collapse {
+    overflow: hidden;
+  }
+
   span.sheet-collapsible {
     grid-column : 1 / 4;
     height      : 0em;
@@ -2165,11 +2199,14 @@ div.sheet-rot-grid label[title="permaneant rot"] > span {
     word-break  : break-word;
   }
 
-  input.sheet-display[value*="collapse"] ~ div.sheet-talents-grid span.sheet-collapsible,
-  input.sheet-display[value*="collapse"] ~ div.sheet-mutantions-grid span.sheet-collapsible {
+  input.sheet-display[value*="collapse"] ~ div.sheet-grid span.sheet-collapsible {
      height    : auto;
      text-align: left;
      visibility: visible;
+  }
+
+  input.sheet-display[value*="settings"] ~ div.sheet-grid button.sheet-toggles {
+    opacity: 100;
   }
 
   button.sheet-collapse[type="action"] {
@@ -2186,7 +2223,7 @@ div.sheet-rot-grid label[title="permaneant rot"] > span {
 
 div.sheet-attributes-box1 {
   background-size: cover;
-  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-new/Mutant%20Year%20Zero/images/header.jpg");
+  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header.jpg");
 }
 
 div.sheet-appearance-box1 {
